test/libyul/yulSyntaxTests/invalid_type4.yul
{
    switch 1
    case 8: invalidType {}
}
// ----
// TypeError 3781: (24-38): Expected a value of type "" but got "invalidType".
// TypeError 5473: (24-38): "invalidType" is not a valid type (user defined types are not yet supported).
